2011-08-09  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* ItkToolbox/ItkImFilter.cpp (v0.4.1):

	- Use shortname and longname of every filter instead of hardcoded
	strings. Add macro ISFILTER() to make the code cleaner.

	- Method CopyMatlabInputsToItkImages() has been renamed as
	CopyMatlabInputToItkImage().

	* ItkToolbox/MexBaseFilter.hpp (v0.4.2):
	* ItkToolbox/MexBaseFilter.cpp (v0.3.8):

	- Rename method CopyMatlabInputsToItkImages() as
	CopyMatlabInputToItkImage(), as there can be only 1 image at the
	input. Also, this method should not be virtual.

	- Add shortname and longname strings. BaseFilter cannot be invoked
	by the user, but the definitions are necessary when we use
	EXCLUDEFILTER().

	* ItkToolbox/MexBinaryDilateImageFilter.cpp (v0.1.3):
	* ItkToolbox/MexDanielssonDistanceMapImageFilter.cpp (v0.3.4):
	* ItkToolbox/MexBinaryThinningImageFilter3D.cpp (v0.1.4):
	* ItkToolbox/MexSignedMaurerDistanceMapImageFilter.cpp (v0.2.4):

	- Add shortname and longname strings to every filter, so that we
	don't need to hardcode in ItkImFilter.cpp the string that a user
	can type to invoke a filter.

	* ItkToolbox/MexBinaryDilateImageFilter.hpp (v0.1.3):
	* ItkToolbox/MexDanielssonDistanceMapImageFilter.hpp (v0.3.4):
	* ItkToolbox/MexBinaryThinningImageFilter3D.hpp (v0.2.6):
	* ItkToolbox/MexSignedMaurerDistanceMapImageFilter.hpp (v0.2.5):

	- Add shortname and longname strings to every filter, so that we
	don't need to hardcode in ItkImFilter.cpp the string that a user
	can type to invoke a filter.

	- Fix bug. In EXCLUDEFILTER(), wrong method name, and missing method.

2011-08-08  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* ItkToolbox/MexBinaryThinningImageFilter3D.cpp (v0.1.3),
	ItkToolbox/CMakeLists.txt (v0.4.0),
	ItkToolbox/MexDanielssonDistanceMapImageFilter.cpp (v0.3.3),
	ItkToolbox/MexBinaryDilateImageFilter.cpp (v0.0.2),
	ItkToolbox/MexBaseFilter.cpp (v0.3.7),
	ItkToolbox/MexSignedMaurerDistanceMapImageFilter.cpp (v0.2.3),